
group("SkExamples") {
  deps = [
    ":SkSampleAnimatedGradient"
    ":SkSampleAnimator"
    ":SkSampleAnimBlur"
    ":SkSampleArc"
    ":SkSampleAvoid"
    ":SkSampleBigBlur"
    ":SkSampleBigGradient"
    ":SkSampleBitmapRect"
    ":SkSampleBlur"
    ":SkSampleBox"
    ":SkSampleCamera"
    ":SkSampleChart"
    ":SkSampleClamp"
    ":SkSampleClip"
    ":SkSampleClock"
    ":SkSampleColorFilter"
    ":SkSampleComplexClip"
    ":SkSampleConcavePaths"
    ":SkSampleCull"
    ":SkSamplePatch"
    ":SkSamplePath"
    ":SkSamplePathClip"
    ":SkSamplePathEffects"
    ":SkSamplePathFill"
    ":SkSamplePathUtils"
    ":SkSamplePictFile"
    ":SkSamplePicture"
    ":SkSamplePoints"
    ":SkSamplePolyToPoly"
    ":SkSampleRegion"
    ":SkSampleRepeatTile"
    ":SkSampleRotateCircles"
    ":SkSampleShaders"
    ":SkSampleShaderText"
    ":SkSampleSkLayer"
    ":SkSampleSlides"
    ":SkSampleSpiral"
    ":SkSampleStringArt"
    ":SkSampleStrokePath"
    ":SkSampleStrokeRect"
    ":SkSampleText"
    ":SkSampleTextAlpha"
    ":SkSampleTextOnPath"
    ":SkSampleTextureDomain"
    ":SkSampleTiling"
    ":SkSampleTinyBitmap"
    ":SkSampleUnitMapper"
  ]
}

static_library("SkSampleBase") {
  sources = [
    "//third_party/skia/samplecode/SampleApp.cpp"
    "//third_party/skia/gm/gm.cpp"
    "//third_party/skia/gm/gm.h"
  ]

  configs += ["//third_party/skia/gn:skia_internal_config"]
  deps = [
    "//third_party/skia/gn:skview_main"
    "//third_party/skia/gn:skview"
    "//third_party/skia/gn:skia"
    "//third_party/skia/gn:skia_samplecode"
    "//third_party/angle:libEGL"
    "//third_party/angle:libGLESv2"
  ]

  forward_dependent_configs_from = deps
}

executable("SkSampleAnimatedGradient") {
  sources = ["//third_party/skia/samplecode/SampleAnimatedGradient.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleAnimator") {
  sources = ["//third_party/skia/samplecode/SampleAnimator.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleAnimBlur") {
  sources = ["//third_party/skia/samplecode/SampleAnimBlur.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleArc") {
  sources = ["//third_party/skia/samplecode/SampleArc.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleAvoid") {
  sources = ["//third_party/skia/samplecode/SampleAvoid.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleBigBlur") {
  sources = ["//third_party/skia/samplecode/SampleBigBlur.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleBigGradient") {
  sources = ["//third_party/skia/samplecode/SampleBigGradient.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleBitmapRect") {
  sources = ["//third_party/skia/samplecode/SampleBitmapRect.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleBlur") {
  sources = ["//third_party/skia/samplecode/SampleBlur.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleBox") {
  sources = ["//third_party/skia/samplecode/SampleBox.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleCamera") {
  sources = ["//third_party/skia/samplecode/SampleCamera.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleChart") {
  sources = ["//third_party/skia/samplecode/SampleChart.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleClamp") {
  sources = ["//third_party/skia/samplecode/SampleClamp.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleClip") {
  sources = ["//third_party/skia/samplecode/SampleClip.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleClock") {
  sources = ["//third_party/skia/samplecode/SampleClock.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleColorFilter") {
  sources = ["//third_party/skia/samplecode/SampleColorFilter.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleComplexClip") {
  sources = ["//third_party/skia/samplecode/SampleComplexClip.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleConcavePaths") {
  sources = ["//third_party/skia/samplecode/SampleConcavePaths.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleCull") {
  sources = ["//third_party/skia/samplecode/SampleCull.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePatch") {
  sources = ["//third_party/skia/samplecode/SamplePatch.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePath") {
  sources = ["//third_party/skia/samplecode/SamplePath.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePathClip") {
  sources = ["//third_party/skia/samplecode/SamplePathClip.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePathEffects") {
  sources = ["//third_party/skia/samplecode/SamplePathEffects.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePathFill") {
  sources = ["//third_party/skia/samplecode/SamplePathFill.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePathUtils") {
  sources = ["//third_party/skia/samplecode/SamplePathUtils.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePictFile") {
  sources = ["//third_party/skia/samplecode/SamplePictFile.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePicture") {
  sources = ["//third_party/skia/samplecode/SamplePicture.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePoints") {
  sources = ["//third_party/skia/samplecode/SamplePoints.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSamplePolyToPoly") {
  sources = ["//third_party/skia/samplecode/SamplePolyToPoly.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleRegion") {
  sources = ["//third_party/skia/samplecode/SampleRegion.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleRepeatTile") {
  sources = ["//third_party/skia/samplecode/SampleRepeatTile.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleRotateCircles") {
  sources = ["//third_party/skia/samplecode/SampleRotateCircles.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleShaders") {
  sources = ["//third_party/skia/samplecode/SampleShaders.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleShaderText") {
  sources = ["//third_party/skia/samplecode/SampleShaderText.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleSkLayer") {
  sources = ["//third_party/skia/samplecode/SampleSkLayer.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleSlides") {
  sources = ["//third_party/skia/samplecode/SampleSlides.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleSpiral") {
  sources = ["//third_party/skia/samplecode/SampleSpiral.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleStringArt") {
  sources = ["//third_party/skia/samplecode/SampleStringArt.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleStrokePath") {
  sources = ["//third_party/skia/samplecode/SampleStrokePath.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleStrokeRect") {
  sources = ["//third_party/skia/samplecode/SampleStrokeRect.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleText") {
  sources = ["//third_party/skia/samplecode/SampleText.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleTextAlpha") {
  sources = ["//third_party/skia/samplecode/SampleTextAlpha.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleTextOnPath") {
  sources = ["//third_party/skia/samplecode/SampleTextOnPath.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleTextureDomain") {
  sources = ["//third_party/skia/samplecode/SampleTextureDomain.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleTiling") {
  sources = ["//third_party/skia/samplecode/SampleTiling.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleTinyBitmap") {
  sources = ["//third_party/skia/samplecode/SampleTinyBitmap.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}

executable("SkSampleUnitMapper") {
  sources = ["//third_party/skia/samplecode/SampleUnitMapper.cpp"]
  deps = [":SkSampleBase"]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  configs -= ["//build/config/win:console"]
  configs += ["//build/config/win:windowed"]
}
