
import("//build/templates/afx.gni")

afx("rastertek_alphamap_effect") {
  source = "alphamap.afx"
  classname = "AlphaMapEffect"
  filename = "alphamap"
}

executable("rastertek_d3d11_alphamap") {
  sources = ["main.cc"]
  deps = ["//azer:azer", "//base:base", "//base:appinit",
    ":rastertek_alphamap_effect"
    "../common:rastertek_d3d11_common"
  ]
}