
import("//build/templates/afx.gni")

afx("rastertek_blur_ambient_effect") {
  source = "ambient.afx"
  classname = "AmbientEffect"
  filename = "ambient"
}

executable("rastertek_d3d11_blur") {
  sources = ["main.cc"]
  deps = ["//azer:azer", "//base:base", "//base:appinit",
    ":rastertek_blur_ambient_effect"
    "../common:rastertek_d3d11_common"
  ]
}