
import("//build/templates/afx.gni")

afx("rastertek_bumpmap_effect") {
  source = "bumpmap.afx"
  classname = "BumpMapEffect"
  filename = "bumpmap"
}

executable("rastertek_d3d11_bumpmap") {
  sources = ["main.cc"]
  deps = ["//azer:azer", "//base:base", "//base:appinit",
    ":rastertek_bumpmap_effect"
    "../common:rastertek_d3d11_common"
  ]
}