
import("//build/templates/afx.gni")

afx("rastertek_diffuse_effect") {
  source = "diffuse.afx"
  classname = "DiffuseEffect"
}

executable("rastertek_d3d11_culling") {
  sources = ["main.cc"]
  deps = ["//azer:azer", "//base:base", "//base:appinit",
    "//azer/math:math"
    ":rastertek_diffuse_effect"
    "../common:rastertek_d3d11_common"
  ]
}