
import("//build/templates/afx.gni")

afx("rastertek_fire_effect") {
  source = "fire.afx"
  classname = "FireEffect"
  filename = "afx_fire_effect"
}

executable("rastertek_d3d11_fire") {
  sources = ["main.cc"]
  deps = ["//azer:azer", "//base:base", "//base:appinit",
    ":rastertek_fire_effect"
    "../common:rastertek_d3d11_common"
  ]
}